--- a/app/src/main/res/layout/item_active_event.xml
+++ b/app/src/main/res/layout/item_active_event.xml
@@ -10,7 +10,9 @@
     android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="4dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    android:clickable="true"
+    android:focusable="true">
 
     <ScrollView
         android:layout_width="match_parent"
