--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple_200">#FFBB86FC</color>
+    <color name="bottom_nav_background">#000000</color>
+    <color name="bottom_nav_background_light">#FFBB86FC</color>
+
+
+
 </resources>
